--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
     - name: docker login
       uses: docker/login-action@v1
       with:
-        username: masungil
+        username: ehanadul
         password: ${{secrets.DOCKER_PASSWORD}}
         
     - name: docker image 허브에 저장 
