--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,6 @@ jobs:
     #- name: 소스 복사 
     #  run: git clone https://github.com/masungil70/kosa-devops-step2
     - uses: actions/checkout@v3
-
     - name: Setup JDK17 
       uses: actions/setup-java@v3
       with:
@@ -25,7 +24,7 @@ jobs:
         
     - name: Test with gradle
       run: ./gradlew --info test
-     
+
     - name: Spring boot  실행 파일 생성
       run: ./gradlew bootJar 
         
@@ -46,6 +45,12 @@ jobs:
     name: Deploy
     runs-on: self-hosted
     steps:
+    - uses: actions/checkout@v3
+      with:
+        sparse-checkout: |
+          docker-compose_nginx.yml
+          nginx/
+        sparse-checkout-cone-mode: false
     - name: docker login
       uses: docker/login-action@v1
       with:
@@ -55,5 +60,9 @@ jobs:
     - name: docker image pull
       run: docker pull ehanadul/devops_step2:v1.0
 
-      
+    - name: 기존 컨테이너 중지
+      run: docker compose -f docker-compose_nginx.yml down || true
+
+    - name: 컨테이너 기동 (nginx + app)
+      run: docker compose -f docker-compose_nginx.yml up -d
     
