--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,18 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     # 소스 복사 
     #- name: 소스 복사 
     #  run: git clone https://github.com/masungil70/kosa-devops-step2
     - uses: actions/checkout@v3
-    - name: Setup JDK17 
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+    # - name: Setup JDK17 
+    #   uses: actions/setup-java@v3
+    #   with:
+    #     java-version: '17'
+    #     distribution: 'temurin'
       
     - name: gradlew 파일 실행 권한 설정 
       run: chmod +x gradlew
@@ -66,6 +66,13 @@ jobs:
 
     - name: docker image pull
       run: docker pull ehanadul/devops_step2:v1.0
+      
+    - name: Check files
+    run: |
+      pwd
+      ls -al
+      ls -al nginx || true
+
 
     - name: 기존 컨테이너 중지
       run: docker compose -f docker-compose_nginx.yml down || true
